--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,131 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+body{    
+    background: linear-gradient(90deg, #785354 0%, #77595a 50%, #6f4948 100%);
+    
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+
+.clear-fix{
+    float:none;
+    clear:both;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.worker-wrapper{
+    width: 50%;
+    height: 139px;
+    display: block;
+    float: left;
+    .worker-info{
+        float: left;
+        width: 100%;
+        display:block;
+        height: 100%;
+    }
+}
+
+.worker-list-dialog{
+    overflow-y: auto;
+}
+
+.model-wrapper{
+    width: 50%;
+    height: 139px;
+    display: block;
+    float: left;
+    .model-info{
+        float: left;
+        width: 100%;
+        display:block;
+        height: 100%;
+    }
+    .selected-model{
+        background: #A1C68B;
+        color:#F7F7F7;
+    }
+}
+
+.model-list-dialog{
+    overflow-y: auto;
+}
+
+.size{
+    display: block;
+    float:left;
+    width:  25%;
+    height: 50px;
+}
+
+.selected{
+    background-color:#A1C68B;
+    color: #f7f7f7;
+}
+
+.size-buttons,.buttons-quantity{
+    display: block;
+    clear: both;
+    width: 100%;
+    height: 50%;
+
+    .index-control,.finish-button-wrapper{
+        display: block;
+        overflow: hidden;
+        width: 100%;
+    }
+
+    button{
+        height: 60px;
+        width: 50%;
+    }
+    .back{
+        display: block;
+        float:left;
+    }
+    .forward{
+        display: block;
+        float:right;
+    }
+    .fill{
+        float: left;
+    }
+    .finish{
+        color:#f7f7f7;
+        float:right;
+        background: rgb(119, 213, 241);
+    }
+}
+
+.quantity-wrapper{
+    display: block;
+    float: left;
+    width: 100%;
+
+    input{
+        width: 70%;
+        display: block;
+        clear: both;
+        height: 40px;
+        font-size: 40px;
+        font-weight: 300;
+    }
+}
+
+.select-models-control{
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    .forward{
+        display: block;
+        margin: auto;
+        width: 50%;
+        height: 72px;
+    }
+}
+
