--- a/src/app/components/worker-detail/worker-detail.component.scss
+++ b/src/app/components/worker-detail/worker-detail.component.scss
@@ -54,9 +54,12 @@
     width: 100%;
     overflow: hidden;
     justify-content: center;
+    flex-wrap: wrap;
     .model-element{
         width: 100px;
         height: 100px;
+        overflow: hidden;
+        flex: 1 1 100px;
         button{
             padding: 5px;
             border-radius: 7px;
@@ -64,7 +67,8 @@
             color: #faecec;
             border: 1px solid #5c486f;
             font-weight: 600;
-            min-height: 70px;
+            width: 100%;
+            height: 100%;
             transition: all 300ms;
             &:hover{
                 background: #4a5873;
