commented this.scrollToDialogTitle() on ngOnInit on worker-detail and ngNonBindable

--- a/src/app/components/complete-order-quantity/complete-order-quantity.component.html
+++ b/src/app/components/complete-order-quantity/complete-order-quantity.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title #dialogTitle>
     Añadir Cantidades
 </div>
-<mat-dialog-content>
+<mat-dialog-content ngNonBindable>
 
     {{sizesSelected[currentIndex].modelTitle}} - {{sizesSelected[currentIndex].modelFeatures}} - 
     {{sizesSelected[currentIndex].number}}
