translate:no on make-order-quantity component

--- a/src/app/components/make-order-quantity/make-order-quantity.component.html
+++ b/src/app/components/make-order-quantity/make-order-quantity.component.html
@@ -2,7 +2,7 @@
     Indicar cantidad
 </div>
 
-<mat-dialog-content>
+<mat-dialog-content translate="no">
     <div>
         {{sizeItems[currentIndex].modelId}}
         {{sizeItems[currentIndex].modelTitle}}
